
// TODO this isn't appropriate for all subprojects, just the Java ones (not React)
subprojects {

    apply plugin: 'java' // core plugin provided by gradle
    
    group = 'org.thinkbigthings.zdd'
    version = '1.0-SNAPSHOT'

    sourceCompatibility = 14
    // sourceCompatibility = JavaVersion.VERSION_14

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
        testImplementation 'org.mockito:mockito-junit-jupiter:3.0.0'
    }

    test {
        useJUnitPlatform()
    }


    // use preview features
    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }
}

task copyWebApp(type: Copy) {

    description 'copies built files from reactjs to the server'

    dependsOn ':reactjs:build'
    dependsOn ':server:classes'

    from 'reactjs/build'
    into 'server/build/resources/main/static'
}

task runAll () {
    dependsOn('copyWebApp')
    dependsOn(':server:bootRun')
}

task buildAll () {
    dependsOn('copyWebApp')
    dependsOn(':server:bootJar')
}

project(':perf') {
    dependencies {
        implementation project(':dto')
    }
}

project(':server') {
    dependencies {
        implementation project(':dto')
    }
}
